依存関係を含んだjarでjavaコマンドから実行可能にしました